Wireshark PEEKREMOTE incorrectly decoding QoS data packets from Cisco Sniffer APs
This issue was migrated from bug 10139 in our old bug tracker.
Original bug information:
Reporter: Vignesh Viswanathan
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: 1.11.x (Experimental)
Attachments:
attached_pcap.pcap: Filtered capture from the sniffer APs
: attached_screen1.jpg
: attached_screen2.jpg
: attached_screen3.jpg
: attached_screen4.jpg
ap135type1.pcap: Sample with AP135 using Aruba ERM with Peek Mode (type1)
airopeek-broken-frames.pcap: Some broken frames