PEEKREMOTE packets don't appear to have Atheros padding.

Call the without-Atheros-padding dissector for the payload.

Fixes bug 10139.

Change-Id: I3b5dd25953113fe30b9278e4533561933304ae5b
Reviewed-on: https://code.wireshark.org/review/2030
Reviewed-by: Guy Harris <guy@alum.mit.edu>